AWE/src/objects/RuleAction__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Action_Label__c</fullName>
        <label>Action Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Emails__c</fullName>
        <label>Additional Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apex_Job_Class__c</fullName>
        <label>Apex Job Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Bulk API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallOut_Action__c</fullName>
        <label>CallOut Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callout_Method__c</fullName>
        <label>Callout Method</label>
        <picklist>
            <picklistValues>
                <fullName>GET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Callout_Timeout__c</fullName>
        <description>Sets the timeout in milliseconds for the request. This can be any value between 1 and 60,000</description>
        <inlineHelpText>Set the timeout in milliseconds for the request. This can be any value between 1 and 60,000</inlineHelpText>
        <label>Callout Timeout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrossObjectField__c</fullName>
        <inlineHelpText>Cross Object Field Notation :  Relationshipname.FieldName. Eg:- Account.Type</inlineHelpText>
        <label>Cross Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DispalyField__c</fullName>
        <formula>/*If (type is Update ,&apos;ABC, if (type is insert ,xxx, if(type is send email sdf, if(type is action dddddd)))  */

IF(ISPICKVAL(Type__c ,&apos;Update Field&apos;) ,IF(!ISBLANK(CrossObjectField__c ) , &quot;Cross Object Field: &quot;+ CrossObjectField__c ,  Field_API_Name__c ),IF(ISPICKVAL(Type__c ,&apos;Insert Related Object&apos;),&quot;Object :&quot; ,IF(ISPICKVAL(Type__c ,&apos;Send Email&apos;) ,&quot;To: &quot; +User_Owner_Id__c   ,&quot;XXX&quot;)))

  
/*
IF(ISPICKVAL(Type__c ,&apos;Update Field&apos;) ,IF(!ISBLANK(CrossObjectField__c ) , &quot;Cross Object Field: &quot;+ CrossObjectField__c ,  Field_API_Name__c ),IF(ISPICKVAL(Type__c ,&apos;Insert Related Object&apos;),&quot;Object :&quot; ,IF(ISPICKVAL(Type__c ,&apos;Send Email&apos;) ,&quot;To: &quot; +&quot;User &quot;+&quot;, Template &quot;+&quot;ValueTemplate&quot; ,&quot;XXX&quot;))



*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field/Object/Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <formula>IF(ISPICKVAL(Type__c ,&apos;Update Field&apos;) ,
        IF(!ISBLANK(CrossObjectField__c ) , 
                       Value__c ,
                       IF(ISPICKVAL(Field_Type__c ,
                                      &apos;TEXTAREA&apos;),Value__c ,Value__c )),
  
 
 
                                       IF(ISNULL(Email_Template__c ) ,  &quot;Template Used: &quot; +Email_Template__c , 
                                       

                                   IF(ISPICKVAL(Type__c ,&apos;Insert Related Object&apos;), 
                                              &quot;(Field: Value),(Field:Value)..... &quot; ,

                                                  IF(ISPICKVAL(Type__c ,&apos;Send Email&apos;) ,  &quot;Template Used : &quot;+  EmailTemplateName__c  ,

 
 &quot;AA&quot;)

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTemplateName__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Folder__c</fullName>
        <label>Email Template Folder</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <description>Sets the URL for the endpoint of the external server for this request.</description>
        <inlineHelpText>Set  the URL for the endpoint of the external server for this request.</inlineHelpText>
        <label>Endpoint URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Field_API_Name__c</fullName>
        <label>External Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <picklist>
            <picklistValues>
                <fullName>ccount Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Modified By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIC Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIC Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticker Symbol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Number</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Input_Parameters__c</fullName>
        <description>stores the parameter required for http callouts &amp; apex class execution</description>
        <inlineHelpText>Input parameter in form key1:sobjectField_Value1,
key2:sobjectField_Value2</inlineHelpText>
        <label>Input Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_Value__c</fullName>
        <label>Long Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_API_Name__c</fullName>
        <label>Lookup Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_Name__c</fullName>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Object__c</fullName>
        <label>Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Where_Fields__c</fullName>
        <label>Condition</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notified_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rule_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Output_Parameters__c</fullName>
        <description>stores the output response mapping for http callout &amp; apex class</description>
        <inlineHelpText>Output parameter in form key1:sobjectField_Value1,
key2:sobjectField_Value2</inlineHelpText>
        <label>Output Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prioritization_Method__c</fullName>
        <label>Prioritization Method</label>
        <picklist>
            <picklistValues>
                <fullName>Round Robin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Calculation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Parameter__c</fullName>
        <label>Request Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Parameter__c</fullName>
        <label>Response Parameter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>Rule_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Update Field</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Related Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Unrelated Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsert Related Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsert Unrelated Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Classification</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Callout-HTTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute an Apex Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load Iframe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load a VF Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Import_Code__c</fullName>
        <label>Unique Import Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Owner_Id__c</fullName>
        <label>User/Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rule Action</label>
    <nameField>
        <displayFormat>Action #{0000}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ApexClass_Required</fullName>
        <active>true</active>
        <description>when the action is execute apex job apex class is required</description>
        <errorConditionFormula>AND( ISPICKVAL(Type__c , &apos;Execute An Apex Job&apos;), ISBLANK(  Apex_Job_Class__c   ))</errorConditionFormula>
        <errorMessage>Please select the apex job</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Send_Email_Template_Req</fullName>
        <active>true</active>
        <description>when the action is send email template is required</description>
        <errorConditionFormula>AND( ISPICKVAL(Type__c , &apos;Send Email&apos;), ISBLANK(  Email_Template__c  ))</errorConditionFormula>
        <errorMessage>Please select the email template</errorMessage>
    </validationRules>
</CustomObject>